Remove overflow hidden and rely on js to fix overflow

--- a/style.css
+++ b/style.css
@@ -28,9 +28,6 @@ body {
 .calc-screen {
     margin-top: auto;
     margin-bottom: auto;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: clip;
 }
 .keys {
     background-color: grey;
